plugins {
    id 'java'
    id 'org.springframework.boot' version '4.1.0'
}

group = 'com.mydata'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

dependencies {
    def slackSdkVersion = '1.49.0'

    implementation platform('org.springframework.boot:spring-boot-dependencies:4.1.0')
    compileOnly platform('org.springframework.boot:spring-boot-dependencies:4.1.0')
    annotationProcessor platform('org.springframework.boot:spring-boot-dependencies:4.1.0')
    testImplementation platform('org.springframework.boot:spring-boot-dependencies:4.1.0')
    testImplementation platform('org.testcontainers:testcontainers-bom:2.0.5')
    testCompileOnly platform('org.springframework.boot:spring-boot-dependencies:4.1.0')
    testAnnotationProcessor platform('org.springframework.boot:spring-boot-dependencies:4.1.0')

    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-graphql'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-liquibase'
    implementation "com.slack.api:bolt:${slackSdkVersion}"
    implementation "com.slack.api:bolt-jakarta-socket-mode:${slackSdkVersion}"
    implementation 'org.liquibase:liquibase-core'

    runtimeOnly 'org.postgresql:postgresql'
    runtimeOnly 'org.glassfish.tyrus.bundles:tyrus-standalone-client:2.2.0'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.springframework.graphql:spring-graphql-test'
    testImplementation 'org.testcontainers:testcontainers-junit-jupiter'
    testImplementation 'org.testcontainers:testcontainers-postgresql'
}

tasks.named('test') {
    useJUnitPlatform()
}

def localEnvFile = layout.projectDirectory.file('.env')

Map<String, String> loadLocalEnv(File envFile) {
    if (!envFile.exists()) {
        return [:]
    }

    return envFile.readLines('UTF-8').collectEntries { line ->
        def trimmed = line.trim()
        if (trimmed.isEmpty() || trimmed.startsWith('#')) {
            return [:]
        }
        if (trimmed.startsWith('export ')) {
            trimmed = trimmed.substring('export '.length()).trim()
        }

        def separatorIndex = trimmed.indexOf('=')
        if (separatorIndex <= 0) {
            return [:]
        }

        def key = trimmed.substring(0, separatorIndex).trim()
        if (!(key ==~ /[A-Za-z_][A-Za-z0-9_]*/)) {
            return [:]
        }

        def value = trimmed.substring(separatorIndex + 1).trim()
        if (value.length() >= 2) {
            def first = value.charAt(0)
            def last = value.charAt(value.length() - 1)
            if ((first == '"' as char && last == '"' as char) || (first == '\'' as char && last == '\'' as char)) {
                value = value.substring(1, value.length() - 1)
            }
        }

        return [(key): value]
    }
}

tasks.named('bootRun') {
    doFirst {
        loadLocalEnv(localEnvFile.asFile).each { key, value ->
            if (System.getenv(key) == null) {
                environment key, value
            }
        }
    }
}

def adminUiDirectory = layout.projectDirectory.dir('frontend/admin')
def adminUiDistDirectory = adminUiDirectory.dir('dist')
def adminUiStaticDirectory = layout.buildDirectory.dir('resources/main/static/admin-ui')

tasks.register('adminUiNpmInstall', Exec) {
    description = '관리자 React 앱 npm 의존성을 설치합니다.'
    group = 'build'
    workingDir = adminUiDirectory.asFile
    commandLine 'npm', 'ci'
    inputs.file(adminUiDirectory.file('package.json'))
    inputs.file(adminUiDirectory.file('package-lock.json'))
    outputs.dir(adminUiDirectory.dir('node_modules'))
}

tasks.register('adminUiNpmBuild', Exec) {
    description = '관리자 React 앱을 빌드합니다.'
    group = 'build'
    dependsOn 'adminUiNpmInstall'
    workingDir = adminUiDirectory.asFile
    commandLine 'npm', 'run', 'build'
    inputs.dir(adminUiDirectory.dir('src'))
    inputs.file(adminUiDirectory.file('index.html'))
    inputs.file(adminUiDirectory.file('package.json'))
    inputs.file(adminUiDirectory.file('package-lock.json'))
    inputs.file(adminUiDirectory.file('tsconfig.json'))
    inputs.file(adminUiDirectory.file('vite.config.ts'))
    inputs.file(adminUiDirectory.file('codegen.ts'))
    inputs.file(layout.projectDirectory.file('src/main/resources/graphql/admin.graphqls'))
    outputs.dir(adminUiDistDirectory)
}

tasks.register('adminUiBuild', Copy) {
    description = '관리자 React 앱 빌드 산출물을 Spring Boot 정적 리소스로 복사합니다.'
    group = 'build'
    dependsOn 'adminUiNpmBuild'
    from adminUiDistDirectory
    into adminUiStaticDirectory
}

tasks.named('processResources') {
    dependsOn 'adminUiBuild'
}
